# drinkapp

./: .gitignore  main.py  user.py
backend/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  drink.py  setup.cfg
backend/drinkapi/: drink.py  main.py  user.py
backend/drinkapi/models/: __init__.py  user.py
backend/src/: app_result.rs  error.rs  main.rs  routes.rs
backend/src/handlers/: drink.rs  hello.rs  mod.rs
backend/src/models/: drink.rs  mod.rs
backend/src/web/: mod.rs  routes_drink.rs  routes_hello.rs
backend/tests/: test_app_workflow.py  test_drink.py
backend/tests/models/: test_drink.py
client/: package-lock.json
client/src/: App.vue
client/src/components/: Drinks.vue
client/src/router/: index.js
client/src/views/: Drinks.vue
