[package]
name = "drinkapi"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
