[package]
name = "drinkapi"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.79"
axum = { version ="0.7.3", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.0.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json" ] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features = ["auth"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
